--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
             justify-content: space-around;
             padding: 20px 0;
             text-align: center;
-            font-family: "Times New Roman", Times, serif; /* Font original */
         }
 
         .category {
@@ -68,11 +67,6 @@
 
         .category:hover i {
             color: #ff6b6b;
-        }
-
-        .category:focus i,
-        .category:active i {
-            color: #FF0055 !important;
         }
 
         .product-section {
@@ -260,28 +254,23 @@
     </div>
 
     <div class="container">
-        <!-- Seções de Categorias com Links de Âncoras -->
         <div class="categories">
-            <a href="#coqueteleira" class="category">
-                <i class="fas fa-blender"></i>
-                <p>Coqueteleiras</p>
-            </a>
-            <a href="#garrafa" class="category">
-                <i class="fas fa-tint"></i>
-                <p>Garrafas</p>
-            </a>
-            <a href="#galao" class="category">
-                <i class="fas fa-tint"></i>
-                <p>Galões</p>
-            </a>
-            <a href="#mola" class="category">
+            <div class="category">
                 <i class="fas fa-dumbbell"></i>
                 <p>Acessórios</p>
-            </a>
+            </div>
+            <div class="category">
+                <i class="fas fa-blender"></i>
+                <p>Coqueteleiras</p>
+            </div>
+            <div class="category">
+                <i class="fas fa-tint"></i>
+                <p>Garrafas</p>
+            </div>
         </div>
 
-        <!-- Seção Coqueteleira -->
-        <div class="product-section" id="coqueteleira">
+        <!-- Primeiro Produto: Coqueteleira -->
+        <div class="product-section">
             <div class="product-image">
                 <img id="main-image" src="large_roxa.jpg" alt="Coqueteleira Roxa" onclick="zoomImage(this)">
             </div>
@@ -296,7 +285,7 @@
                     <button onclick="changeImage('large_rosa.jpg')">Pink</button>
                     <button onclick="changeImage('large_azul_tifanni.jpg')">Azul Tiffany</button>
                 </div>
-                <a href="https://wa.me/5515997265082?text=Olá! Tenho interesse na Coqueteleira DFE FIT 600 ML. Preço: R$ 25,00." target="_blank" class="whatsapp-button">
+                <a href="https://wa.me/5515997265082" target="_blank" class="whatsapp-button">
                     <i class="fab fa-whatsapp"></i> Comprar via WhatsApp
                 </a>
                 <div class="thumbnail-gallery">
@@ -309,8 +298,8 @@
             </div>
         </div>
 
-        <!-- Seção Garrafas -->
-        <div class="product-section" id="garrafa">
+        <!-- Segundo Produto: Garrafa -->
+        <div class="product-section">
             <div class="product-image">
                 <img id="main-image-2" src="tubinho_vermelho.jpg" alt="Garrafa Vermelha" onclick="zoomImage(this)">
             </div>
@@ -323,7 +312,7 @@
                     <button onclick="changeImageSecondProduct('tubinho_preto.jpg')">Preto</button>
                     <button onclick="changeImageSecondProduct('tubinho_rosa.jpg')">Rosa</button>
                 </div>
-                <a href="https://wa.me/5515997265082?text=Olá! Tenho interesse na Garrafa DFE 500 ML. Preço: R$ 10,90." target="_blank" class="whatsapp-button">
+                <a href="https://wa.me/5515997265082" target="_blank" class="whatsapp-button">
                     <i class="fab fa-whatsapp"></i> Comprar via WhatsApp
                 </a>
                 <div class="thumbnail-gallery">
@@ -334,76 +323,91 @@
             </div>
         </div>
 
-        <!-- Seção Galão -->
-        <div class="product-section" id="galao">
+        <!-- Terceiro Produto: Galão -->
+        <div class="product-section">
             <div class="product-image">
-                <img id="main-image-5" src="galao_azul.jpg" alt="Galão Azul" onclick="zoomImage(this)">
+                <img id="main-image-3" src="galao_azul.jpg" alt="Garrafa Azul 5L" onclick="zoomImage(this)">
             </div>
             <div class="product-details">
                 <h2 class="product-title">Galão 1L DFE FIT</h2>
                 <p class="product-price">R$ 18,90</p>
                 <div class="colors">
                     <p>Cor:</p>
-                    <button onclick="changeImageFifthProduct('galao_azul.jpg')">Azul</button>
-                    <button onclick="changeImageFifthProduct('galao_rosa.jpg')">Rosa</button>
-                    <button onclick="changeImageFifthProduct('galao_vermelho.jpg')">Vermelho</button>
+                    <button onclick="changeImageThirdProduct('galao_azul.jpg')">Azul</button>
+                    <button onclick="changeImageThirdProduct('galao_rosa.jpg')">Rosa</button>
+                    <button onclick="changeImageThirdProduct('galao_vermelho.jpg')">Vermelho</button>
                 </div>
-                <a href="https://wa.me/5515997265082?text=Olá! Tenho interesse no Galão 1L DFE FIT. Preço: R$ 18,90." target="_blank" class="whatsapp-button">
+                <a href="https://wa.me/5515997265082" target="_blank" class="whatsapp-button">
                     <i class="fab fa-whatsapp"></i> Comprar via WhatsApp
                 </a>
                 <div class="thumbnail-gallery">
-                    <img src="galao_azul.jpg" alt="Galão Azul" onclick="changeImageFifthProduct('galao_azul.jpg')">
-                    <img src="galao_rosa.jpg" alt="Galão Rosa" onclick="changeImageFifthProduct('galao_rosa.jpg')">
-                    <img src="galao_vermelho.jpg" alt="Galão Vermelho" onclick="changeImageFifthProduct('galao_vermelho.jpg')">
+                    <img src="galao_azul.jpg" alt="Garrafa Azul 5L" onclick="changeImageThirdProduct('galao_azul.jpg')">
+                    <img src="galao_rosa.jpg" alt="Garrafa Rosa 5L" onclick="changeImageThirdProduct('galao_rosa.jpg')">
+                    <img src="galao_vermelho.jpg" alt="Garrafa Vermelha 5L" onclick="changeImageThirdProduct('galao_vermelho.jpg')">
                 </div>
             </div>
         </div>
 
-        <!-- Seção Mola -->
-        <div class="product-section" id="mola">
+        <!-- Quarto Produto: Mola -->
+        <div class="product-section">
             <div class="product-image">
-                <img id="main-image-3" src="mola1.jpg" alt="Mola 1" onclick="zoomImage(this)">
-                <img id="main-image-4" src="mola2.jpg" alt="Mola 2" onclick="zoomImage(this)" style="display:none;">
+                <img id="main-image-4" src="mola1.jpg" alt="Mola Inox Mixer" onclick="zoomImage(this)">
             </div>
             <div class="product-details">
-                <h2 class="product-title">Mola DFE</h2>
+                <h2 class="product-title">Mola Inox Mixer - Acessório para Coqueteleira</h2>
                 <p class="product-price">R$ 3,50</p>
-                <a href="https://wa.me/5515997265082?text=Olá! Tenho interesse na Mola DFE. Preço: R$ 3,50." target="_blank" class="whatsapp-button">
-                    <i class="fab fa-whatsapp"></i> Comprar via WhatsApp
-                </a>
                 <div class="thumbnail-gallery">
-                    <img src="mola1.jpg" alt="Mola 1" onclick="changeImageThirdProduct('mola1.jpg')">
-                    <img src="mola2.jpg" alt="Mola 2" onclick="changeImageThirdProduct('mola2.jpg')">
+                    <img src="mola1.jpg" alt="Mola Inox Mixer" onclick="changeImageFourthProduct('mola1.jpg')">
+                    <img src="mola2.jpg" alt="Mola Inox Mixer" onclick="changeImageFourthProduct('mola2.jpg')">
                 </div>
             </div>
         </div>
 
-        <!-- Seção Info -->
+        <div class="zoomed-image" id="zoomed-image">
+            <span class="close-btn" onclick="closeZoom()">&times;</span>
+            <img src="" alt="Imagem ampliada" id="zoomed-img">
+        </div>
+
+        <!-- Informações -->
         <div class="info-section">
-            <h3>Sobre nós</h3>
-            <p>Na DFE Fitness, oferecemos produtos de alta qualidade para te acompanhar em sua jornada fitness. De coqueteleiras práticas até acessórios inovadores, temos tudo o que você precisa para alcançar seus objetivos com estilo!</p>
+            <h3>Informações</h3>
+            <p>🌟 Prepare-se para a revolução das coqueteleiras! 🌟</p>
+            <p>Estamos empolgados em anunciar que nosso mais novo lançamento Chegou : Coqueteleiras DFE FIT! ✅💪🏽</p>
+            <p>Com um design moderno e vibrante, essas coqueteleiras são ideais para você que não abre mão da praticidade e do estilo.</p>
         </div>
     </div>
 
-    <div class="footer-whatsapp">
-        <a href="https://wa.me/5515997265082?text=Olá! Gostaria de saber mais sobre seus produtos." target="_blank">
-            <i class="fab fa-whatsapp"></i>
-        </a>
-    </div>
-
-    <!-- Zoom Modal -->
-    <div class="zoomed-image" id="zoomed-image">
-        <img id="zoomed-image-src" src="" alt="">
-        <span class="close-btn" onclick="closeZoom()">&times;</span>
-    </div>
+    <a href="https://wa.me/5515997265082" class="footer-whatsapp">
+        <i class="fab fa-whatsapp"></i>
+    </a>
 
     <script>
-        function zoomImage(image) {
-            const zoomedImage = document.getElementById('zoomed-image');
-            const zoomedImageSrc = document.getElementById('zoomed-image-src');
-            zoomedImageSrc.src = image.src;
-            zoomedImage.classList.add('open');
+        function changeImage(image) {
+            document.getElementById('main-image').src = image;
+        }
+
+        function changeImageSecondProduct(image) {
+            document.getElementById('main-image-2').src = image;
+        }
+
+        function changeImageThirdProduct(image) {
+            document.getElementById('main-image-3').src = image;
+        }
+
+        function changeImageFourthProduct(image) {
+            document.getElementById('main-image-4').src = image;
+        }
+
+        function zoomImage(img) {
+            var zoomedImg = document.getElementById('zoomed-img');
+            var zoomedImageContainer = document.getElementById('zoomed-image');
+            zoomedImg.src = img.src;
+            zoomedImageContainer.classList.add('open');
         }
 
         function closeZoom() {
-            docume
+            document.getElementById('zoomed-image').classList.remove('open');
+        }
+    </script>
+</body>
+</html>
