--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 <p>Garrafas</p>
             </div>
             <div class="category">
-                <a href="#acessorios"><i class="fas fa-dumbbell"></i></a>
+                <a href="#mola"><i class="fas fa-dumbbell"></i></a>
                 <p>Acessórios</p>
             </div>
         </div>
